--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^1.4.12",
     "core-js": "^2.6.5",
+    "element-ui": "^2.11.1",
+    "gemini-scrollbar": "^1.5.3",
     "vue": "^2.6.10",
+    "vue-gemini-scrollbar": "^2.0.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
@@ -17,7 +21,7 @@
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-eslint": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "sass": "^1.18.0",
@@ -33,7 +37,18 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off",
+      "no-debugger": "off",
+      "no-unused-vars": [
+        2,
+        {
+          "vars": "local",
+          "args": "none"
+        }
+      ],
+      "no-unused-expressions": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
